asteria/core/tests/errors/elaboration_errors/incorrect_kind_for_application_type_function.asteriacore
x : forall {a : Type}.
    forall {a : Type}.
      a b
  = x
  ;;
